--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en-ca">
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Space Aliens Game">
+    <meta name="keywords" content="mths, ics2o, ajshdaljksdhaljkdhasldhasloqwieuyqw">
+    <meta name="author", content="Daniel Pawelko">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Aliens</title>
   </head>
   <body>
