--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Space Aliens Game">
-    <meta name="keywords" content="mths, ics2o, ajshdaljksdhaljkdhasldhasloqwieuyqw">
+    <meta name="keywords" content="mths, ics2o">
     <meta name="author", content="Daniel Pawelko">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Aliens</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" sizes="16x16" href="favicon-32x32.png">
+    <link rel="manifest" href="/sites.webmanifedt">
   </head>
   <body>
+    <!-- get the latest release here: https://phaser.io/download/stable -->
     <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
     <script type="module" src="js/game.js"></script>
   </body>
