linter error debuged

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Space Aliens Game">
     <meta name="keywords" content="mths, ics2o">
-    <meta name="author", content="Daniel Pawelko">
+    <meta name="author" content="Daniel Pawelko">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Space Aliens</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
